--- a/index.html
+++ b/index.html
@@ -166,12 +166,12 @@
                         <p class="meet-our-team-occupation">Graphic Design</p>
                     </li>
                     <li class="meet-our-team-text-list-item">
-                        <p class="meet-our-team-name">Matthew Dix</p>
-                        <p class="meet-our-team-occupation">Graphic Design</p>
+                        <p class="meet-our-team-name">Christopher Campbell</p>
+                        <p class="meet-our-team-occupation">Branding/UX design</p>
                     </li>
                     <li class="meet-our-team-text-list-item">
-                        <p class="meet-our-team-name">Matthew Dix</p>
-                        <p class="meet-our-team-occupation">Graphic Design</p>
+                        <p class="meet-our-team-name">Michael Fertig </p>
+                        <p class="meet-our-team-occupation">Developer</p>
                     </li>
                 </ul>
             </div>
